#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package pytools
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-01
2013-01-31 Andy Salnikov
- moved class PyDataType here from psana_python
- copied EnumType from pypdsdata, made few improvements